Add fstab and tlp config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -10,5 +10,11 @@
     ~/.config/i3:
         path: config/i3/
         create: true
-
+    /etc/fstab:
+        path: fstab
+        force: false
+    /etc/default/tlp:
+        path: tlp
+        force: true
+        relink: true
 
